k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skysense
  labels:
    name: skysense
    environment: production
